--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,71 @@
 /*ОБЩИЕ СТИЛИ*/
 /*--------------------------------------------------------------------------------------------------------------------*/
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@font-face {
+    font-family: 'Proxima Nova Regular';
+    src: local('Proxima Nova Regular'),
+    url('fonts/ProximaNova-Regular.woff2') format('woff2'),
+    url('fonts/ProximaNova-Regular.woff') format('woff'),
+    url('fonts/ProximaNova-Regular.ttf') format('ttf'),
+    url('fonts/ProximaNova-Regular.eot') format('eot');
+}
+
+@font-face {
+    font-family: 'Proxima Nova Light';
+    src: local('Proxima Nova Light'),
+    url('fonts/ProximaNova-Light.woff2') format('woff2'),
+    url('fonts/ProximaNova-Light.woff') format('woff'),
+    url('fonts/ProximaNova-Light.ttf') format('ttf'),
+    url('fonts/ProximaNova-Light.eot') format('eot');
+}
+
+
+@font-face {
+    font-family: 'Proxima Nova Thin';
+    src: local('Proxima Nova Thin'),
+    url('fonts/ProximaNovaT-Thin.woff2') format('woff2'),
+    url('fonts/ProximaNovaT-Thin.woff') format('woff'),
+    url('fonts/ProximaNovaT-Thin.ttf') format('ttf'),
+    url('fonts/ProximaNovaT-Thin.eot') format('eot');
+}
+
+@font-face {
+    font-family: 'Proxima Nova Bold';
+    src: local('Proxima Nova Bold'),
+    url('fonts/ProximaNova-Bold.woff2') format('woff2'),
+    url('fonts/ProximaNova-Bold.woff') format('woff'),
+    url('fonts/ProximaNova-Bold.ttf') format('ttf'),
+    url('fonts/ProximaNova-Bold.eot') format('eot');
+}
+
+@font-face {
+    font-family: 'Proxima Nova Semibold';
+    src: local('Proxima Nova Semibold'),
+    url('fonts/ProximaNova-Semibold.woff2') format('woff2'),
+    url('fonts/ProximaNova-Semibold.woff') format('woff'),
+    url('fonts/ProximaNova-Semibold.ttf') format('ttf'),
+    url('fonts/ProximaNova-Semibold.eot') format('eot');
+}
+
+
+@font-face {
+    font-family: 'Proxima Nova Extrabold';
+    src: local('Proxima Nova Extrabold'),
+    url('fonts/ProximaNova-Extrabld.woff2') format('woff2'),
+    url('fonts/ProximaNova-Extrabld.woff') format('woff'),
+    url('fonts/ProximaNova-Extrabld.ttf') format('ttf'),
+    url('fonts/ProximaNova-Extrabld.eot') format('eot');
+}
+
+
+@font-face {
+    font-family: 'Proxima Nova Black';
+    src: local('Proxima Nova Black'),
+    url('fonts/ProximaNova-Black.woff2') format('woff2'),
+    url('fonts/ProximaNova-Black.woff') format('woff'),
+    url('fonts/ProximaNova-Black.ttf') format('ttf'),
+    url('fonts/ProximaNova-Black.eot') format('eot');
+}
 
 :root{
     --white: #ffffff;
@@ -11,7 +75,7 @@
     --blue: #1E22AA;
     --lightblue: #4e6ed0;
     --blueop: rgb(30,34,170,0.4);
-    --blackop: rgb(0,0,0,0.5);
+    --blackop: rgb(0,0,0,0.6);
 }
 
 *{
@@ -26,56 +90,61 @@ html {
 
 body{
     background-color: var(--white);
-    font-family: "Poppins", sans-serif;
-    font-size:20px;
+}
+
+
+h1{
+    font-size:2.4em;
+    font-family: "Proxima Nova Black", sans-serif;
+}
+
+h2{
+    font-size:2em;
+    font-family: "Proxima Nova Extrabold", sans-serif;
+}
+
+h3{
+    font-size:1.4em;
+    font-family: "Proxima Nova Bold", sans-serif;
+}
+h4{
+    font-size:1.2em;
+    font-family: "Proxima Nova Semibold", sans-serif;
+}
+p{
+    font-size:1em;
+    font-family: "Proxima Nova Regular", sans-serif;
 }
 
 @media(max-width:480px) {
     body{
-        font-size: 16px;
+        font-size: 17px;
     }
 }
 
 
 @media(max-width:767px) {
     body{
-        font-size: 17px;
+        font-size: 19px;
     }
 }
 
 @media (min-width: 768px) and (max-width:991px)  {
         body{
-            font-size: 18px;
+            font-size: 21px;
         }
     }
 
 @media (min-width: 992px) and (max-width:1199px)  {
     body{
-        font-size: 19px;
+        font-size: 23px;
     }
 }
 
 @media(min-width:1200px){
     body{
-        font-size: 20px;
+        font-size: 24px;
     }
-}
-
-
-h1{
-    font-size:3em;
-}
-
-h2{
-    font-size:2em;
-}
-
-h3{
-    font-size:1.5em;
-}
-
-p{
-    font-size:1em;
 }
 
 
@@ -116,7 +185,6 @@ p{
     position: absolute;
     top:5px;
     right: 5px;
-    font-size: 1.5em;
     cursor: pointer;
 }
 
@@ -132,6 +200,11 @@ p{
     border-color: rgba(255, 0, 0,0.5) !important;
 }
 
+
+
+/*--------------------------------------------------------------------------------------------------------------------*/
+/*ХЭДЕР*/
+/*--------------------------------------------------------------------------------------------------------------------*/
 a{
     text-decoration: none;
 }
@@ -148,27 +221,23 @@ ul{
     padding: 1em 5%;
     vertical-align: middle;
     z-index: 10000;
-    height:3.5em;
+}
+
+.center_div{
     align-items: center;
+    display:flex;
+    justify-content: space-between;
+    width:100%;
 }
 
 .logo{
     display: inline-block;
     color: var(--white);
     line-height: 0;
-    font-size: 1.5em;
     align-items: center;
 }
 
-.logo img{
-    margin-top: -0.25em;
-    height: 1.5em;
-    display: inline-block;
-}
-
 .nav{
-    font-weight: bold;
-    font-size: 1em;
     max-height: none;
     top: 0;
     position: relative;
@@ -203,7 +272,7 @@ ul{
     display: none;
 }
 
-/*планшет*/
+
 @media (max-width: 768px) {
     .nav{
         top: 3.5em;
@@ -345,7 +414,7 @@ section {
 
 .company-info {
     flex: 1.5;
-    padding: 5vh 5vw 0 5vw;
+    padding: 5vh 5vw 0 0;
 }
 
 .form {
@@ -371,7 +440,6 @@ section {
 
 .inputGroup input {
     backdrop-filter: blur(10px);
-    font-size: 0.8em;
     padding: 0.8em;
     outline: none;
     border: 3px solid var(--white);
@@ -380,6 +448,8 @@ section {
     width: 100%;
     color: var(--white) !important;
     position:relative;
+    font-size: 0.8em;
+    font-family: "Proxima Nova Light", sans-serif;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -399,41 +469,32 @@ select:-webkit-autofill:focus {
 .inputGroup textarea {
     backdrop-filter: blur(10px);
     position:relative;
-    font-size: 0.8em;
     color: var(--white) !important;
     resize: none;
     padding: 0.8em;
+    font-size: 0.8em;
+    font-family: "Proxima Nova Light", sans-serif;
     outline: none;
     border: 3px solid var(--white);
     background-color: transparent;
     border-radius: 1em;
     width: 100%;
-    scrollbar-width: thin;
-    scrollbar-color: var(--gray) transparent;
 }
 
 .inputGroup textarea::-webkit-scrollbar {
-    width: 5px;
-}
-
-.inputGroup textarea::-webkit-scrollbar-thumb {
-    background-color: var(--gray);
-    border-radius: 3px;
-}
-
-.inputGroup textarea::-webkit-scrollbar-track {
-    background: transparent;
-    border-radius: 2em;
+   display:none;
 }
 
 .inputGroup label {
     z-index: 100;
     position: absolute;
     left: 0.8em;
-    top: 0.5em;
+    top: 0.6em;
     pointer-events: none;
     transition: all 0.3s ease;
     color: var(--white);
+    font-size: 1em;
+    font-family: "Proxima Nova Regular", sans-serif;
 }
 
 .inputGroup :is(input:focus, input:valid, textarea:focus, textarea:valid)~label {
@@ -458,8 +519,8 @@ select:-webkit-autofill:focus {
     border-radius: 0.6em;
     border-width: 0.17em;
     padding: 0.2em;
-    font-size: 1em;
-    font-weight: bold;
+    font-size: 0.8em;
+    font-family: "Proxima Nova Semibold", sans-serif;
 }
 
 .submit_button:hover{
@@ -630,13 +691,6 @@ span.sim-dot {
     width:100%;
 }
 
-.prep_description h2{
-
-}
-
-.prep_description p{
-    font-style: italic;
-}
 
 .prep_description{
     text-align: center;
@@ -648,7 +702,7 @@ span.sim-dot {
     width: 100%;
     display: grid;
     grid-gap: 5vh 5vw;
-    grid-template-columns:repeat(auto-fit, minmax(200px, 300px)) ;
+    grid-template-columns:repeat(auto-fit, minmax(200px, 350px)) ;
     grid-auto-flow: row;
     justify-content: center;
 }
@@ -677,14 +731,12 @@ span.sim-dot {
 }
 
 .job_title{
+    font-family: "Proxima Nova Semibold", sans-serif;
     margin: 10px 0;
-    font-weight: bold;
     color:var(--black);
 }
 
 .prep_info{
-    font-size: 0.9em;
-    font-style: italic;
     color:var(--black);
 }
 
@@ -714,12 +766,13 @@ span.sim-dot {
 
 .article{
     box-shadow: 5px 3px 10px 1px var(--black);
-    margin-top: 20px;
+    margin-top: 40px;
     padding: 10px;
     width: 100%;
     height: auto;
     border-radius: 10px;
     align-content: center;
+    transition: all .2s ease-out;
 }
 
 .article h3{
@@ -736,19 +789,36 @@ span.sim-dot {
     height: auto;
     align-items: center;
 }
-.art_div{
-   text-align:right;
-}
+/*.art_div{*/
+/*   text-align:right;*/
+/*}*/
 
 .art_text{
     text-align: justify;
 }
 
-.art_link{
+/*.art_link{*/
+/*    text-decoration: none;*/
+/*    color: var(--blue);*/
+/*    text-align: right;*/
+/*}*/
+
+.art_link {
+    color: var(--black);
     text-decoration: none;
-    color: var(--blue);
-    text-align: right;
 }
+
+.art_link:hover .article{
+    box-shadow: 5px 3px 10px 1px var(--blue);
+    transform: translate3d(5px, -10px,0);
+}
+
+
+
+
+/*--------------------------------------------------------------------------------------------------------------------*/
+/*ФУТЕР*/
+/*--------------------------------------------------------------------------------------------------------------------*/
 
 footer{
     background:var(--black);
@@ -815,7 +885,6 @@ hr{
 }
 
 .inputGroup0 input {
-    font-size: 0.8em;
     padding: 0.5em;
     outline: none;
     border: 3px solid var(--white);
@@ -827,7 +896,6 @@ hr{
 
 .inputGroup0 textarea {
     background-color: transparent;
-    font-size: 0.8em;
     resize: none;
     padding: 0.5em;
     outline: none;
@@ -883,8 +951,6 @@ hr{
     border-radius: 0.6em;
     border-width: 0.17em;
     padding: 0.1em;
-    font-size: 1em;
-    font-weight: bold;
 }
 
 .submit_button0:hover{
@@ -899,7 +965,6 @@ hr{
    }
 
     .f_item{
-        /*margin-top: 0.5em;*/
         width:auto;
     }
 
