--- a/public/style.css
+++ b/public/style.css
@@ -798,6 +798,17 @@ span.sim-dot {
     height:auto;
     padding:1em;
     text-align: center;
+    display: grid;
+    grid-template-raws: auto auto auto 1fr ;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.avatar_conteiner{
+    width: 100%;
+    align-items: center;
 }
 
 .avatar{
@@ -822,6 +833,8 @@ span.sim-dot {
 }
 
 .prep_info{
+    height: auto;
+    vertical-align: bottom;
     color:var(--black);
 }
 
@@ -1030,7 +1043,7 @@ hr{
     color: var(--white);
 }
 
-.inputGroup0 :is(input:focus, textarea:focus, textarea:valid, input.non-empty)~label {
+.inputGroup0 :is(input:focus, input:valid, textarea:focus, textarea:valid, input.non-empty)~label {
     transform: translateY(-50%) scale(.9);
     left: 0.8em;
     top: 0;
